Don't show default option when style select is open - this fixes default option overlapping current selection

--- a/scss/styleselect.scss
+++ b/scss/styleselect.scss
@@ -30,6 +30,7 @@ select[data-ss-uuid] {
 
 	&.open {
 		.ss-default-option {
+			display: none;
 		}
 		ul {
 			display: table;
